--- a/simulycra/Dockerfile
+++ b/simulycra/Dockerfile
@@ -3,7 +3,7 @@
 FROM ubuntu
 
 RUN apt-get update
-RUN apt-get install -y python-software-properties python g++ make
+RUN apt-get install -y python-software-properties python g++ make netcat-traditional
 RUN add-apt-repository ppa:chris-lea/node.js
 RUN apt-get update
 RUN apt-get install -y nodejs
